--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@ h1 {
 }
 
 .container{
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
     display: flex;
-    max-height: 25em;
+    height: 28em;
     border-radius: 10px;
     overflow: hidden;
 }
